--- a/test.html
+++ b/test.html
@@ -5,19 +5,10 @@
         <script src="bower_components/platform/platform.js"></script>
         <link rel="import" href="file-input.html">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/pure/0.5.0/pure-min.css">
-        
-        <style>
-            .uploadButton {
-                position: relative;
-            }
-        </style>
     </head>
     
     <body>
-        <div class="pure-button uploadButton">
-            <file-input>Select a file</file-input>
-        </div>
+        <file-input class="btn btn-primary">Select a file</file-input>
     </body>
 
 </html>
