feat($extension): optional file extensions validation
Allow users to specify an array of allowed or disallowed extensions.

closes #7

--- a/file-input.html
+++ b/file-input.html
@@ -16,7 +16,7 @@
 -->
 <link rel="import" href="bower_components/polymer/polymer.html">
 
-<polymer-element name="file-input" attributes="accept directory maxFiles">
+<polymer-element name="file-input" attributes="accept directory extensions maxFiles">
 
     <template>
     
