--- a/file-input.html
+++ b/file-input.html
@@ -16,7 +16,7 @@
 -->
 <link rel="import" href="bower_components/polymer/polymer.html">
 
-<polymer-element name="file-input" attributes="accept directory extensions maxFiles">
+<polymer-element name="file-input" attributes="accept directory extensions maxFiles maxSize minSize">
 
     <template>
     
