fix($setup): more generic polymer import

--- a/element/file-input.html
+++ b/element/file-input.html
@@ -13,7 +13,7 @@
  * More features are likely to be added as requested.
  */
 -->
-<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../../polymer/polymer.html">
 
 <polymer-element name="file-input" attributes="accept directory extensions maxFiles maxSize minSize">
 
