docs($cleanup) mention vulcanize, bower keywords

--- a/file-input.html
+++ b/file-input.html
@@ -11,8 +11,11 @@ A better `<input type="file">`.
 3. You want any sort of file validation?  Do it yourself!
 4. The API is lacking in many respects.
 
-
 Now, a new, better, evolved (and evolving) element to take its place: `<file-input>`!
+
+__Don't forget to [vulcanize](http://www.polymer-project.org/articles/concatenating-web-components.html)
+your main/parent HTML file before deploying into production.  This will ensure
+that all of your HTML imports are concatenated into one file.__
 
 @element file-input
 @status beta
