feat(reset): reset underlying <input type="file"> too closes #17

--- a/file-input.html
+++ b/file-input.html
@@ -126,8 +126,8 @@ that all of your HTML imports are concatenated into one file.__
         */
 
         /**
-         * To reset the `files` and `invalidFiles` cache on your element, 
-         * use the `reset()` function:
+         * To reset the `files` and `invalidFiles` cache and also reset the
+         * underlying `<input type="file">`, use the `reset()` function:
          *
          *     document.querySelector("file-input").reset();
          * 
