chore(cleanup): tidy up the code

--- a/file-input.html
+++ b/file-input.html
@@ -31,7 +31,7 @@ that all of your HTML imports are concatenated into one file.__
                 position: relative;
             }
 
-            #fileInputInput {
+            #fileInput {
                 bottom: 0;
                 height: 100%;
                 left: 0;
@@ -49,7 +49,7 @@ that all of your HTML imports are concatenated into one file.__
 
         <input
             accept="{{accept}}"
-            id="fileInputInput"
+            id="fileInput"
             on-change="{{changeHandler}}"
             type="file"
         >
