--- a/file-input.html
+++ b/file-input.html
@@ -13,6 +13,17 @@ A better `<input type="file">`.
 
 Now, a new, better, evolved (and evolving) element to take its place: `<file-input>`!
 
+#### `<file-input>` integrates perfectly with `<ajax-form>`!
+Simply include a `<file-input>` in [an `<ajax-form>`](https://github.com/garstasio/ajax-form), 
+ensure the `name` attribute is present on the `<file-input>`, and the `<ajax-form>` 
+includes an `enctype` attriute with a value of `multipart/form-data`.  Any valid 
+files will be sent along with the other form fields!  
+
+If you incoude a `required` attribute on the `<file-input>`, `<ajax-form>` will 
+even prevent the form from being submitted if there isn't at least one valid 
+file selected!  Note that the validation of custom elements, such as `<file-input>`,
+will first be possible in [`<ajax-form>` 1.3.0](https://github.com/garstasio/ajax-form/issues/6).
+
 __Don't forget to [vulcanize](http://www.polymer-project.org/articles/concatenating-web-components.html)
 your main/parent HTML file before deploying into production.  This will ensure
 that all of your HTML imports are concatenated into one file.__
