Forgot that attributes should be using hyphens

--- a/demo.html
+++ b/demo.html
@@ -26,7 +26,7 @@
         <p>See the code for this demo in the <a href="https://github.com/garstasio/file-input/tree/gh-pages/components/file-input/demo.html">demo.html file</a>
         of the <a href="https://github.com/garstasio/file-input">file-input GitHub repository</a>.</p>
 
-        <file-input class="btn btn-primary" extensions='["jpeg", "jpg"]' minSize="500000" maxSize="3000000">
+        <file-input class="btn btn-primary" extensions='["jpeg", "jpg"]' min-size="500000" max-size="3000000">
             <span class="glyphicon glyphicon-file"></span> Select a file
         </file-input>
 
