start fixing tests, remove shadow DOM #26

--- a/file-input.html
+++ b/file-input.html
@@ -39,7 +39,7 @@ that all of your HTML imports are concatenated into one file.__
             position: relative;
         }
 
-        #fileInput {
+        .fileInput {
             bottom: 0;
             height: 100%;
             left: 0;
@@ -55,7 +55,7 @@ that all of your HTML imports are concatenated into one file.__
 
     <content></content>
 
-    <input id="fileInput" type="file">
+    <input class="fileInput" type="file">
 
 </template>
 
