--- a/demo.html
+++ b/demo.html
@@ -16,6 +16,7 @@
             white-space: pre; 
             unicode-bidi: embed;
         }
+        FILE-INPUT { position: relative; }
     </style>
 </head>
 
