--- a/demo.html
+++ b/demo.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
     <title>file-input demo</title>
 
-    <script src="../webcomponentsjs/webcomponents-lite.js"></script>
-    <link rel="import" href="file-input.html">
+    <script src="file-input.js"></script>
 
     <!--Only used by the demo to add common bootstrap button styles to the file chooser-->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
@@ -20,16 +19,19 @@
     </style>
 </head>
 
-<body unresolved>
+<body>
 
     <h1>Easily style a file chooser and set restrictions:</h1>
 
         <p>See the code for this demo in the <a href="https://github.com/garstasio/file-input/tree/gh-pages/components/file-input/demo.html">demo.html file</a>
         of the <a href="https://github.com/garstasio/file-input">file-input GitHub repository</a>.</p>
 
-        <file-input class="btn btn-primary" extensions='["jpeg", "jpg"]' min-size="500000" max-size="3000000">
+        <file-input class="btn btn-primary" minSize="500000" maxSize="3000000">
             <span class="glyphicon glyphicon-file"></span> Select a file
         </file-input>
+        <script>
+            document.querySelector('file-input').extensions = ['jpg', 'jpeg']
+        </script>
 
         <div>
             <br/>
@@ -48,11 +50,7 @@
 </body>
 
 <script>
-    window.addEventListener('WebComponentsReady', function(e) {
-        document.body.removeAttribute('unresolved');
-    });
-
-    document.getElementsByTagName('file-input')[0].addEventListener('change', function(event) {
+    document.querySelector('file-input').addEventListener('change', function(event) {
         var valid = event.detail.valid,
             invalid = event.detail.invalid,
             validFilesEl = document.getElementById('validFiles'),
